--- a/DeepTrace/Shared/MainLayout.razor
+++ b/DeepTrace/Shared/MainLayout.razor
@@ -38,7 +38,14 @@
         if (firstRender)
         {
             IsDarkMode = await _mudThemeProvider!.GetSystemPreference();
+            await _mudThemeProvider.WatchSystemPreference(OnSystemPreferenceChanged);
             StateHasChanged();
         }
+    }
+
+    private async Task OnSystemPreferenceChanged(bool newValue)
+    {
+        IsDarkMode = newValue;
+        await InvokeAsync(StateHasChanged);
     }
 }
