--- a/DeepTrace/Pages/DataSources.razor
+++ b/DeepTrace/Pages/DataSources.razor
@@ -58,7 +58,8 @@
                             int pos = i;
 
                             <MudItem xs="10">
-                                <MudTextField Label="Query" @bind-Value="_queryForm.Source.Queries[pos].Query" Variant="Variant.Text" InputType="InputType.Search" Lines="2" />
+                                @*<MudTextField Label="Query" @bind-Value="_queryForm.Source.Queries[pos].Query" Variant="Variant.Text" InputType="InputType.Search" Lines="2" />*@
+                                <MudAutocomplete Label="Query" @bind-Value="_queryForm.Source.Queries[pos].Query" Lines="1" Variant="Variant.Text" SearchFunc="@SearchForQuery"></MudAutocomplete>
                             </MudItem>
                             <MudItem xs="1">
                                 <MudIconButton Icon="@Icons.Material.Outlined.Add" Variant="Variant.Outlined" aria-label="add" OnClick="@(() => AddQuery(pos))" />
@@ -146,6 +147,14 @@
 
     private bool IsChartHidden => DisplayData == null;
     private bool IsChartShown => !IsChartHidden;
+
+    private async Task<IEnumerable<string>> SearchForQuery(string value)
+    {
+        var metricsNames = await Prometheus.GetMetricsNames();
+        if (string.IsNullOrEmpty(value))
+            return new string[0];
+        return metricsNames.Where(x => x.Contains(value, StringComparison.InvariantCultureIgnoreCase));
+    }
 
     private DateTime? MinDate
     {
